src/objects/IG_Subproject_Target__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <description>IG project code</description>
        <inlineHelpText>subproject code needed for reference by IG</inlineHelpText>
        <label>Subproject Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DateFollowupVisit1__c</fullName>
        <description>Follow up visit 1</description>
        <label>DateFollowupVisit1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateFollowupVisit2__c</fullName>
        <description>Follow up visit 2</description>
        <label>DateFollowupVisit2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateFollowupVisit3__c</fullName>
        <description>Follow up visit 3</description>
        <label>DateFollowupVisit3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateMobilization__c</fullName>
        <description>Date of the first visit to mobilize and register</description>
        <label>DateMobilization</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePreliminaryTrainingDay1__c</fullName>
        <description>Training day 1</description>
        <label>DatePreliminaryTrainingDay1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePreliminaryTrainingDay2__c</fullName>
        <description>Training day 2</description>
        <label>DatePreliminaryTrainingDay2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePreliminaryTrainingDay3__c</fullName>
        <description>Training day 3</description>
        <label>DatePreliminaryTrainingDay3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipName>IG_Targets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IG_Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IG Region</label>
        <referenceTo>IG_Region__c</referenceTo>
        <relationshipName>IG_Targets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocationFollowupVisit1__c</fullName>
        <description>GPS location</description>
        <inlineHelpText>latitude the longitude</inlineHelpText>
        <label>Location Followup Visit1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationFollowupVisit2__c</fullName>
        <description>GPS location</description>
        <inlineHelpText>latitude the longitude</inlineHelpText>
        <label>Location Followup Visit2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationFollowupVisit3__c</fullName>
        <description>GPS location</description>
        <inlineHelpText>latitude the longitude</inlineHelpText>
        <label>Location Followup Visit3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationMobilization__c</fullName>
        <description>GPS location</description>
        <inlineHelpText>latitude then longitude</inlineHelpText>
        <label>Location Mobilization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationPreliminaryTrainingDay1__c</fullName>
        <description>GPS location</description>
        <inlineHelpText>latitude then longitude</inlineHelpText>
        <label>Location Preliminary Training Day1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationPreliminaryTrainingDay2__c</fullName>
        <description>GPS location</description>
        <inlineHelpText>latitude then longitude</inlineHelpText>
        <label>Location Preliminary Training Day2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationPreliminaryTrainingDay3__c</fullName>
        <description>GPS location</description>
        <inlineHelpText>latitude then longitude</inlineHelpText>
        <label>Location Preliminary Training Day3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Concluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag set when all monitoring info for this object is received</description>
        <label>Monitoring Concluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>IG Subproject Targets</relationshipLabel>
        <relationshipName>IG_Subproject_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Display_Item_Position__c</fullName>
        <description>The position number this item is displayed at amidst other subprojects in that subcounty. This is important and should match whats in the survey</description>
        <inlineHelpText>The position number this item is displayed at amidst other subprojects in that subcounty. This is important and should match whats in the survey</inlineHelpText>
        <label>Phone Display Item Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subcounty</label>
        <referenceTo>Subcounty__c</referenceTo>
        <relationshipName>IG_Targets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>IG Subproject Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IG_Region__c</columns>
        <columns>District__c</columns>
        <columns>Subcounty__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subproject Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IG Subproject Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NUSAF_Persons</fullName>
        <active>false</active>
        <errorConditionFormula>$Organization.Name  = &apos;IG NUSAF&apos;</errorConditionFormula>
        <errorDisplayField>Person__c</errorDisplayField>
        <errorMessage>only people of account IG NUSAF can be added</errorMessage>
    </validationRules>
</CustomObject>